--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class="container">
+      <h2>Password Generator</h2>
       <div class="result-container">
         <span class="result"></span>
         <button class="btn" id="clipboard">
