--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="result-container">
         <span class="result"></span>
         <button class="btn" id="clipboard">
-          <i class="far fa-clipboar"></i>
+          <i class="far fa-clipboard"></i>
         </button>
       </div>
       <div class="settings">
